[package]
name = "enstate"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
homepage = "enstate.rs"
description = "enstate"
repository = "https://github.com/v3xlabs/enstate"
authors = [
    "Luc van Kampen <luc@v3x.email>",
    "Miguel Piedrafita <sup@miguel.build>",
]

[dependencies]
ethers = "2"
axum = "0.6.18"
anyhow = "1.0.71"
tracing = "0.1.27"
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
redis = { version = "0.23.0", features = ["connection-manager", "tokio-comp"] }
ethers-ccip-read = { git = "https://github.com/ensdomains/ethers-ccip-read", branch = "main" }
tower-http = { version = "0.4.1", features = ["cors", "tracing", "trace"] }
rand = "0.8.5"
chrono = "0.4.24"
ethers-contract = "2.0.9"
ethers-core = "2.0.9"
hex = "0.4.3"
thiserror = "1.0.48"
regex = "1.9.5"
rustls = "0.21.7"
bs58 = "0.5.0"
sha2 = "0.10.7"
digest = "0.10.7"
hex-literal = "0.4.1"
axum-macros = "0.3.8"
lazy_static = "1.4.0"
base32 = "0.4.0"
crc16 = "0.4.0"
blake2 = "0.10.6"
rustc-hex = "2.0.1"
serde_with = "3.3.0"
bech32 = "0.10.0-alpha"
crc32fast = "1.3.2"
ciborium = "0.2.1"

[build-dependencies]
chrono = "0.4.24"
