[package]
name = "enstate_worker"
version = "0.0.1"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
# ethers = "2"

wasm-bindgen-futures = "0.4.36"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }

web-sys = { version = "0.3.63", features = ["console"] }

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

# ethers = { version = "2", features = ["ws"] }
# enstate_shared = { path = "../enstate_shared" }

[profile.release]
lto = true
strip = true
codegen-units = 1
