[package]
name = "enstate_shared"
version = "1.0.1-2"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
ethers = "2"
anyhow = "1.0.71"
ethers-core = "2.0.11"
hex-literal = "0.4.1"
tracing = "0.1.27"
bs58 = "0.5.0"
base32 = "0.4.0"
bech32 = "0.10.0-beta"
crc16 = "0.4.0"
ciborium = "0.2.1"
blake2 = "0.10.6"
sha2 = "0.10.7"
thiserror = "1.0.48"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
ethers-contract = "2.0.11"
serde_with = "3.4.0"
async-trait = "0.1.74"
regex = "1.9.5"
chrono = "0.4.24"
rustc-hex = "2.0.1"
serde_json = "1.0.96"
crc32fast = "1.3.2"
hex = "0.4.3"
reqwest = "0.11.22"
ethers-ccip-read = { path = "../../ethers-ccip-read" }
#ethers-ccip-read = { git = "https://github.com/ensdomains/ethers-ccip-read" }
build-info = "0.0.34"

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.36"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
web-sys = { version = "0.3.63", features = ["console"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
build-info-build = "0.0.34"

[profile.release]
lto = true
strip = true
codegen-units = 1
