[package]
name = "enstate-worker"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
worker = "0.0.18"
ethers = "2"

enstate_shared = { path = "../enstate_shared" }

wasm-bindgen-futures = "0.4.36"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }

web-sys = { version = "0.3.63", features = ["console"] }

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
worker-kv = "0.6.0"
async-trait = "0.1.74"

[profile.release]
lto = true
strip = true
codegen-units = 1
